# Proje_Yonetim_Platformu

./: .claudeignore  .gitignore  .graphifyignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  alembic.ini  commit_all.py  commit_msg.txt  config.py  di_container.py  di_registries.py  download_assets.py  main.py  pyproject.toml  quality.py
Project_docs/: 00_INDEX.md  01_MEVCUT_ADMIN_PROJELER_SEKMESI_ANALIZI.md  02_URUN_VIZYONU_VE_KAPSAM.md  03_MODULLER_VE_ISLEVLER.md  04_BILGI_MIMARISI_UX_AKISLARI.md  05_VERI_MODELI.md  06_IS_KURALLARI_DURUMLAR.md  07_TEKNIK_MIMARI.md  08_MVP_YOL_HARITASI.md  09_TEST_KABUL_KRITERLERI.md  10_ACIK_KARARLAR.md  11_HIYERARSIK_GOREV_YONETIMI.md  12_UI_UX_YONETIM_SISTEMLERI.md  13_KALITE_VE_PERFORMANS_YONETIMI.md  14_PREMIUM_UI_UX_TASARIM_PLANI.md  15_ALTYAPI_VE_DAGITIM_PLANI.md  16_SENIOR_MIMARI_STANDARTLAR.md  17_UX_ERISILEBILIRLIK_VE_ETKILESIM_PLANI.md  18_PROJE_INSA_SURECI_PIPELINE.md  KLASOR_YAPISI.MD  Proje_Yonetim_ve_Takip_Platformu_Faz_2.md  RULES.md  SENIOR_ANALIZ_RAPORU_2026-06-12.md  UX_TEMA_GERI_BILDIRIMI_2026-06-13.md
app/: __init__.py  config.py  di_container.py  di_registries.py
controllers/: analytics_controller.py  dashboard_controller.py  decision_controller.py  idea_controller.py  memo_controller.py  note_controller.py  project_controller.py  resource_controller.py  search_controller.py  settings_controller.py  stage_controller.py  task_controller.py
core/: logger.py  module_registry.py
core/events/: app_events.py  event_bus.py
core/exceptions/: base_exception.py  memo_exceptions.py  note_exceptions.py  project_exceptions.py  speech_exceptions.py  stage_exceptions.py  task_exceptions.py
core/managers/: backup_manager.py  font_manager.py  icon_manager.py  log_manager.py  preference_manager.py  secret_manager.py  string_manager.py  theme_manager.py
core/workers/: async_worker.py  transcription_worker.py  worker.py
docs/wiki/: di-container.md  event-bus.md  gorevler-modulu.md  ikon-yonetimi.md  index.md  kurallar-ve-sozlesmeler.md  l10n-string-yonetimi.md  liste-siralama.md  log.md  mimari-genel-bakis.md  sesli-komut.md  tema-sistemi.md  veritabani-katmani.md  worker-altyapisi.md  yol-haritasi.md
domain/dtos/: base_dto.py  forms.py
domain/enums/: decision_status.py  idea_priority.py  idea_status.py  note_type.py  priority.py  project_health.py  project_status.py  resource_type.py  stage_status.py  task_status.py  task_type.py
domain/models/: __init__.py  activity_log.py  attachment.py  checklist_item.py  decision_record.py  idea.py  memo.py  note.py  project.py  project_idea.py  project_stage.py  project_tag.py  resource.py  setting.py  task.py  workflow_stage.py
infrastructure/database/: alembic_runner.py  base_model.py  db_manager.py  migration_runner.py
infrastructure/migrations/: README.md  env.py
infrastructure/repositories/: activity_log_repository.py  attachment_repository.py  base_repository.py  decision_repository.py  idea_repository.py  memo_repository.py  note_repository.py  project_idea_repository.py  project_repository.py  project_tag_repository.py  resource_repository.py  (+3 more)
installer/: windows.iss
packaging/: proje_takip_platformu.spec  proje_takip_platformu_dir.spec  version_info.txt
presentation/: dimensions.py  modules.py
scripts/: build_installer.ps1  build_windows.ps1  download_fonts.py  quality.py
services/: analytics_service.py  dashboard_service.py  decision_service.py  export_service.py  idea_service.py  memo_service.py  note_service.py  project_service.py  resource_service.py  search_service.py  stage_service.py  task_service.py
tests/: conftest.py  test_event_bus.py  test_l10n_no_hardcoded.py  test_mvp_core.py  test_quality_systems.py  test_ui_smoke.py
(+91 files in other folders)
