[project]
name = "proje-takip-platformu"
version = "0.1.0"
description = "Proje Yönetim ve Takip Platformu V2"
authors = [
    { name = "ProjeTakip Team" }
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "SQLAlchemy>=2.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"] # Mümkün mertebe temiz kod
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "tests",
]
