[project]
name = "proje-takip-platformu"
version = "0.1.0"
description = "Proje Yönetim ve Takip Platformu V2"
authors = [
    { name = "ProjeTakip Team" }
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "keyring>=25.0.0",
    "mypy>=1.8.0",
    "pyinstaller>=6.0.0",
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.6.0",
]

[project.scripts]
proje-takip-quality = "scripts.quality:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"] # Mümkün mertebe temiz kod
ignore = [
    "E501",
    "F401",
    "F821",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "tests",
]
